--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
      <h1>Hello World!</h1>
    <div class="style1">
         <p>A simple HTML page using VS Code and Emmett.</p>
-        <p>This is my first web page in quuite a long while. </p>
+        <p>This is my first web page in quite a long while. </p>
         <img src="imgs/krusseth_pic.jpg"> 
         <p>Karen Russeth - Winter Garden, FL </p>
    </div>
