--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
    <div class="style1">
         <p>A simple HTML page using VS Code and Emmett.</p>
         <p>This is my first web page in quite a long while. </p>
+        <p>I am a beginenr again!  </p>
         <img src="imgs/krusseth_pic.jpg"> 
         <p>Karen Russeth - Winter Garden, FL </p>
    </div>
