--- a/week0_HTML_CSS/index.html
+++ b/week0_HTML_CSS/index.html
@@ -12,7 +12,7 @@
      <script src="js/script.js"></script>
 
      <h1>Hello World!</h1>
-   <div1 class="main">
+   <div1>
         <p>A simple HTML page using VS Code and Emmett. </p>
         <p>I will continue to build these pages out. </p>
         <p>This is my first web page in quite a while. I'm a beginner again! This is the most rudimentary page I have created in a long time. </p>
