--- a/week0_HTML_CSS/index.html
+++ b/week0_HTML_CSS/index.html
@@ -16,7 +16,7 @@
         <p>A simple HTML page using VS Code and Emmett. </p>
         <p>I will continue to build these pages out. </p>
         <p>This is my first web page in quite a while. I'm a beginner again!</p>
-        <img src="imgs/krusseth_pic.jpg">
+        <p><img src="imgs/krusseth_pic.jpg"></p>
         <p>Karen Russeth - Winter Garden, FL </p>
    </div>
 
