--- a/week0_HTML_CSS/index.html
+++ b/week0_HTML_CSS/index.html
@@ -13,11 +13,12 @@
 
      <h1>Hello World!</h1>
    <div>
-        <p>A simple HTML page using VS Code and Emmett. </p>
-        <p>I will continue to build these pages out. </p>
-        <p>This is my first web page in quite a while. I'm a beginner again!</p>
-        <p><img src="imgs/krusseth_pic.jpg"></p>
-        <p>Karen Russeth - Winter Garden, FL </p>
+        <p>A simple HTML page using VS Code and Emmett. <br>
+        I will continue to build these pages out. <br>
+        This is my first web page in quite a while. I'm a beginner again! <br>
+        <img src="imgs/krusseth_pic.jpg">
+        <br>
+        Karen Russeth - Winter Garden, FL </p>
    </div>
 
 </body>
