--- a/week0_HTML_CSS/index.html
+++ b/week0_HTML_CSS/index.html
@@ -15,11 +15,11 @@
    <div>
         <p>A simple HTML page using VS Code and Emmett. <br>
         I will continue to build these pages out. <br>
-        This is my first web page in quite a while. I'm a beginner again!</p>
+        This is my first web page in quite a while. I'm a beginner again!
         <br>
         <img src="imgs/krusseth_pic.jpg">
         <br>
-        <p>Karen Russeth - Winter Garden, FL </p>
+        Karen Russeth - Winter Garden, FL </p>
    </div>
 
 </body>
