--- a/week0_HTML_CSS/index.html
+++ b/week0_HTML_CSS/index.html
@@ -17,9 +17,8 @@
         I will continue to build these pages out. <br>
         This is my first web page in quite a while. I'm a beginner again!
         <br>
-        <img src="imgs/krusseth_pic.jpg">
-        <br>
-        Karen Russeth - Winter Garden, FL </p>
+        <p>img src="imgs/krusseth_pic.jpg"></p>
+        <p>aren Russeth - Winter Garden, FL </p>
    </div>
 
 </body>
