--- a/week0_HTML_CSS/index.html
+++ b/week0_HTML_CSS/index.html
@@ -16,7 +16,9 @@
         <p>A simple HTML page using VS Code and Emmett. <br>
         I will continue to build these pages out. <br>
         This is my first web page in quite a while. I'm a beginner again!</p>
-        <p><img src="imgs/krusseth_pic.jpg"></p>
+        <br>
+        <img src="imgs/krusseth_pic.jpg">
+        <br>
         <p>Karen Russeth - Winter Garden, FL </p>
    </div>
 
