--- a/week0_HTML_CSS/index.html
+++ b/week0_HTML_CSS/index.html
@@ -18,7 +18,8 @@
         This is my first web page in quite a while. I'm a beginner again!</p>
         <div>
           <img src="imgs/krusseth_pic.jpg"> <br>
-          <p>Karen Russeth - Winter Garden, FL</p>
+          <p>Karen Russeth  <br>
+          Winter Garden, FL</p>
         </div>        
    </div>
 
