--- a/week0_HTML_CSS/index.html
+++ b/week0_HTML_CSS/index.html
@@ -17,9 +17,11 @@
         I will continue to build these pages out. <br>
         This is my first web page in quite a while. I'm a beginner again!</p>
         <div>
-          <img src="imgs/krusseth_pic.jpg"> <br>
-          <p>Karen Russeth  <br>
-          Winter Garden, FL</p>
+          <p>
+            <img src="imgs/krusseth_pic.jpg"> <br>
+            Karen Russeth  <br>
+            Winter Garden, FL
+          </p>
         </div>        
    </div>
 
