--- a/week0_HTML_CSS/index.html
+++ b/week0_HTML_CSS/index.html
@@ -18,9 +18,9 @@
         This is my first web page in quite a while. I'm a beginner again!</p>
         <div>
           <p>
-            <img src="imgs/krusseth_pic.jpg"> <br>
-            Karen Russeth  <br>
-            Winter Garden, FL
+            <img src="imgs/krusseth_pic.jpg"> 
+            <br>
+            Karen Russeth
           </p>
         </div>        
    </div>
