--- a/week0_HTML_CSS/index.html
+++ b/week0_HTML_CSS/index.html
@@ -17,11 +17,9 @@
         I will continue to build these pages out. <br>
         This is my first web page in quite a while. I'm a beginner again!</p>
         <div>
-          <p>
             <img src="imgs/krusseth_pic.jpg"> 
             <br>
-            Karen Russeth
-          </p>
+            <p>Karen Russeth</p>
         </div>        
    </div>
 
