--- a/week0_HTML_CSS/index.html
+++ b/week0_HTML_CSS/index.html
@@ -19,8 +19,8 @@
         <div>
             <p>
             <img src="imgs/krusseth_pic.jpg"> 
-            <br>
-            Karen Russeth</p>
+            Karen Russeth
+            </p>
         </div>        
    </div>
 
