--- a/week0_HTML_CSS/index.html
+++ b/week0_HTML_CSS/index.html
@@ -16,10 +16,10 @@
         <p>A simple HTML page using VS Code and Emmett. <br>
         I will continue to build these pages out. <br>
         This is my first web page in quite a while. I'm a beginner again!
-        <br>>
-        <img src="imgs/krusseth_pic.jpg"> <br>
-        Karen Russeth
-        </p>     
+        <br>
+        <img src="imgs/krusseth_pic.jpg"> 
+        <br>
+        Karen Russeth</p>     
    </div>
 
 </body>
