table add footer

--- a/week0_HTML_CSS/html-intro-tables/tables.html
+++ b/week0_HTML_CSS/html-intro-tables/tables.html
@@ -67,7 +67,12 @@
                 Parasite
             </td>
          </tr> 
-     </tbody>   
+     </tbody> 
+     <tfooter>
+        <tr>
+            <td colspan="3">Copyright &reg; 2023 KRusseth Designs</td>
+        </tr>
+     </tfooter>  
     </table>
 </body>
 </html>
