--- a/week0_HTML_CSS/html-intro-tables/tables.html
+++ b/week0_HTML_CSS/html-intro-tables/tables.html
@@ -11,61 +11,31 @@
         <caption>Common Bird Diseases</caption>
         <thead>
         <tr>
-            <th>
-                NAME
-            </th>
-            <th>
-                COMMON NAME
-            </th>
-            <th>
-               CAUSE
-            </th>
+            <th>NAME</th>
+            <th>COMMON NAME</th>
+            <th>CAUSE</th>
         </tr>
         </thead>
         <tbody>
         <tr>
-            <td>
-                Avian influenza
-            </td>
-            <td>
-                Bird Flue
-            </td>
-            <td>
-                Virus
-            </td>
+            <td>Avian influenza</td>
+            <td>Bird Flue</td>
+            <td>Virus</td>
         </tr>
         <tr>
-            <td>
-                Moniliasis
-            </td>
-            <td>
-                Thrush   
-            </td>
-            <td>
-                Fungi
-            </td>
+            <td>Moniliasis</td>
+            <td>Thrush </td>
+            <td>Fungi</td>
         </tr>
         <tr>
-            <td>
-                pododermatitis 
-            </td>
-            <td>
-                Bumblefoot  
-            </td>
-            <td>
-                Bacteria
-            </td>
+            <td>pododermatitis</td>
+            <td>Bumblefoot</td>
+            <td>Bacteria</td>
         </tr>
         <tr>
-            <td>
-                Dermanyssus
-            </td>
-            <td>
-                Red Mite 
-            </td>
-            <td>
-                Parasite
-            </td>
+            <td>Dermanyssus</td>
+            <td>Red Mite</td>
+            <td>Parasite</td>
          </tr> 
      </tbody> 
      <tfooter>
