--- a/week0_HTML_CSS/html-intro-tables/birdtable.html
+++ b/week0_HTML_CSS/html-intro-tables/birdtable.html
@@ -40,7 +40,7 @@
      </tbody> 
      <tfooter>
         <tr>
-            <td colspan="3">Copyright &reg; 2023 KRusseth Designs</td>
+            <td colspan="3">Copyright &reg; 2023 Russeth Designs</td>
         </tr>
      </tfooter>  
     </table>
