--- a/week0_HTML_CSS/html-intro-form/2-2_form.html
+++ b/week0_HTML_CSS/html-intro-form/2-2_form.html
@@ -9,17 +9,17 @@
 <body>
   <header>
     Inside of header - let's add a navbar with some essential links
-    <nav>
+    <p>
       <a href="#">Home</a>
       <a href="#">About</a>
       <a href="#">Contact</a>
-    </nav>
+    </p>
   </header>
   <hr>
   <section>
     <h2>Here is the main section of our page - it consists of a list of articles.</h2>
-    <article>
-      <h2>Article 1 - 1995 was a pretty crazy year for programming languages!</h2>
+    
+    <h2>Article 1 - 1995 was a pretty crazy year for programming languages!</h2>
       <p>Don't believe me? Just check this table out:</p>
       <table>
         <thead>
@@ -64,73 +64,70 @@
           </tr>
         </tfoot>
       </table>
-    </article>
-    <article>
-      <h2>Article 2 - Coming soon...</h2>
-    </article>
-
+    <br>
+    <h2>Article 2 - Coming soon...</h2>
     <hr>
-
+    <section>
     <h2>Contact us!</h2>
-    <form action="#">
+    <form form action="#" method="get" class="form-example">
       <h2>General Information</h2>
-      <div>
+      <div class="form-example">
         <label for="firstname">First Name</label>
-        <input type="text" id="fname">
+        <input type="text" id="firstname" placeholder="First Name">
       </div>
-      <div>
+      <div class="form-example">
         <label for="lastname">Last Name</label>
-        <input type="text" id="lname">
+        <input type="text" id="lastname" placeholder="Last Name">
       </div>
-      <div>
+      <div class="form-example">
         <label for="email">Email</label>
-        <input type="email" id="email">
+        <input type="email" id="email" placeholder="Email Address">
       </div>
-      <div>
+      <div class="form-example">
         <label for="DOB">Date Of Birth</label>
-        <input type="date" id="DOB">
-      </div>
+        <input type="date" id="DOB" placeholder="Date of Birth">
+      </div class="form-example">
       <h2>Essential Questions</h2>
       <span>What kind of work do you need?</span>
-      <div>
+      <div class="form-example">
         <label for="programming">Programming: </label>
         <input type="checkbox" id="programming" name="programming">
       </div>
-      <div>
+      <div class="form-example">
         <label for="design">Design: </label>
         <input type="checkbox" id="design">
       </div>
-      <div>
+      <div class="form-example">
         <label for="singing">Singing: </label>
         <input type="checkbox" id="singing">
       </div>
-      <div>
+      <div class="form-example">
         <label for="comedy">Comedy: </label>
         <input type="checkbox" id="comedy">
       </div>
       <br>
       <span>How interested are you in our design skills?</span>
-      <div>
+      <div class="form-example">
         <label for="very_low">Very Low</label>
         <input type="radio" id="very_low" name="interest" value="very low">
       </div>
-      <div>
+      <div class="form-example">
         <label for="low">Low</label>
         <input type="radio" id="low" name="interest" value="low">
       </div>
-      <div>
+      <div class="form-example">
         <label for="medium">Medium</label>
         <input type="radio" id="medium" name="interest" value="medium">
       </div>
-      <div>
+      <div class="form-example">
         <label for="high">High</label>
         <input type="radio" id="high" name="interest" value="high">
       </div>
-      <div>
+      <div class="form-example">
         <label for="very_high">Very High</label>
         <input type="radio" id="very_high" name="interest" value="very high">
       </div>
-      <div>
+      <div class="form-example">
         <input type="submit" value="Submit me!">
       </div>
     </form>
