2-2 form fixes commit

--- a/week0_HTML_CSS/html-intro-form/2-2_form.html
+++ b/week0_HTML_CSS/html-intro-form/2-2_form.html
@@ -67,6 +67,8 @@
     <br>
     <h2>Article 2 - Coming soon...</h2>
     <hr>
+    </section>
+    
     <section>
     <h2>Contact us!</h2>
     <form form action="#" method="get" class="form-example">
@@ -132,8 +134,9 @@
       </div>
     </form>
   </section>
-  <footer>
-    Here is our footer - let's make sure we copyright &copy; this!
+<hr>  
+<footer>
+    <small>Here is our footer - let's make sure we copyright &copy; this! </small>
   </footer>
 </body>
 </html>
