--- a/week0_HTML_CSS/html-intro-form/2-2_form.html
+++ b/week0_HTML_CSS/html-intro-form/2-2_form.html
@@ -9,11 +9,11 @@
 <body>
   <header>
     Inside of header - let's add a navbar with some essential links
-    <p>
+    <nav class="navbar">
       <a href="#">Home</a>
       <a href="#">About</a>
       <a href="#">Contact</a>
-    </p>
+    </nav>
   </header>
   <hr>
   <section>
