add css file to 2-2 form

--- a/week0_HTML_CSS/html-intro-form/2-2_form.html
+++ b/week0_HTML_CSS/html-intro-form/2-2_form.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/main.css">
     <title>2-2 Form Mockup</title>
 </head>
 <body>
   <header>
     Inside of header - let's add a navbar with some essential links
-    <nav class="navbar">
+    <nav class="topnav">
       <a href="#">Home</a>
       <a href="#">About</a>
       <a href="#">Contact</a>
