--- a/week0_HTML_CSS/html-intro-form/index.html
+++ b/week0_HTML_CSS/html-intro-form/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     Inside of header - let's add a navbar with some essential links
-    <nav class="navbar">
+    <nav>
       <a href="#">Home</a>
       <a href="#">About</a>
       <a href="#">Contact</a>
