--- a/week0_HTML_CSS/html-intro-form/index.html
+++ b/week0_HTML_CSS/html-intro-form/index.html
@@ -72,7 +72,7 @@
     
     <section>
     <h2>Contact us!</h2>
-    <form form action="#" method="get">
+    <form form action="#" method="get" class="form-example">
       <h2>General Information</h2>
       <div class="form-example">
         <label for="firstname">First Name</label>
