--- a/week0_HTML_CSS/html-intro-form/index.html
+++ b/week0_HTML_CSS/html-intro-form/index.html
@@ -74,63 +74,63 @@
     <h2>Contact us!</h2>
     <form form action="#" method="get">
       <h2>General Information</h2>
-      <div class="form-example">
+      <div class="form">
         <label for="firstname">First Name</label>
         <input type="text" id="firstname" placeholder="First Name">
       </div>
-      <div class="form-example">
+      <div class="form">
         <label for="lastname">Last Name</label>
         <input type="text" id="lastname" placeholder="Last Name">
       </div>
-      <div class="form-example">
+      <div class="form">
         <label for="email">Email</label>
         <input type="email" id="email" placeholder="Email Address">
       </div>
-      <div class="form-example">
+      <div class="form">
         <label for="DOB">Date Of Birth</label>
         <input type="date" id="DOB" placeholder="Date of Birth">
-      </div class="form-example">
+      </div class="form">
       <h2>Essential Questions</h2>
       <span>What kind of work do you need?</span>
-      <div class="form-example">
+      <div class="form">
         <label for="programming">Programming: </label>
         <input type="checkbox" id="programming" name="programming">
       </div>
-      <div class="form-example">
+      <div class="form">
         <label for="design">Design: </label>
         <input type="checkbox" id="design">
       </div>
-      <div class="form-example">
+      <div class="form">
         <label for="singing">Singing: </label>
         <input type="checkbox" id="singing">
       </div>
-      <div class="form-example">
+      <div class="form">
         <label for="comedy">Comedy: </label>
         <input type="checkbox" id="comedy">
       </div>
       <br>
       <span>How interested are you in our design skills?</span>
-      <div class="form-example">
+      <div class="form">
         <label for="very_low">Very Low</label>
         <input type="radio" id="very_low" name="interest" value="very low">
       </div>
-      <div class="form-example">
+      <div class="form">
         <label for="low">Low</label>
         <input type="radio" id="low" name="interest" value="low">
       </div>
-      <div class="form-example">
+      <div class="form">
         <label for="medium">Medium</label>
         <input type="radio" id="medium" name="interest" value="medium">
       </div>
-      <div class="form-example">
+      <div class="form">
         <label for="high">High</label>
         <input type="radio" id="high" name="interest" value="high">
       </div>
-      <div class="form-example">
+      <div class="form">
         <label for="very_high">Very High</label>
         <input type="radio" id="very_high" name="interest" value="very high">
       </div>
-      <div class="form-example">
+      <div class="form">
         <input type="submit" value="Submit me!">
       </div>
     </form>
