CSS fix add font-header class

--- a/week0_HTML_CSS/html-intro-form/index.html
+++ b/week0_HTML_CSS/html-intro-form/index.html
@@ -91,7 +91,7 @@
         <input type="date" id="DOB" placeholder="Date of Birth">
       </div class="form">
       <h2>Essential Questions</h2>
-      <span>What kind of work do you need?</span>
+      <span class="form-header">What kind of work do you need?</span>
       <div class="form">
         <label for="programming">Programming: </label>
         <input type="checkbox" id="programming" name="programming">
@@ -109,7 +109,7 @@
         <input type="checkbox" id="comedy">
       </div>
       <br>
-      <span>How interested are you in our design skills?</span>
+      <span class="form-header">How interested are you in our design skills?</span>
       <div class="form">
         <label for="very_low">Very Low</label>
         <input type="radio" id="very_low" name="interest" value="very low">
