--- a/week0_HTML_CSS/html-intro-form/index.html
+++ b/week0_HTML_CSS/html-intro-form/index.html
@@ -67,7 +67,7 @@
       </table>
     <br>
     <h2>Article 2 - Coming soon...</h2>
-    <img src="https://images.aws.nestle.recipes/resized/5b069c3ed2feea79377014f6766fcd49_Original_NTH_Chocolate_Chip_Cookie_448_448.jpg" height=300 width=300>
+    <img src="img/code.png">
     <hr>
     </section>
     
