css article-img

--- a/week0_HTML_CSS/html-intro-form/index.html
+++ b/week0_HTML_CSS/html-intro-form/index.html
@@ -67,7 +67,7 @@
       </table>
     <br>
     <h2>Article 2 - Coming soon...</h2>
-    <img src="img/code.png">
+    <img src="img/code.png" id="article-img">
     <hr>
     </section>
     
