--- a/week0_HTML_CSS/css-mocks/index.html
+++ b/week0_HTML_CSS/css-mocks/index.html
@@ -25,8 +25,29 @@
 
 
 <hr>
-
-
+<div class="cards">
+    <div class="card">
+      <div class="pic-container pic1">
+       </div>
+      <div class="caption">
+        NOM NOM NOM
+      </div>
+    </div>
+    <div class="card">
+      <div class="pic-container pic2">
+       </div>
+      <div class="caption">
+        WANNA DANCE?
+      </div>
+    </div>
+    <div class="card">
+      <div class="pic-container pic3">
+       </div>
+      <div class="caption">
+        HIGH FIVE!
+      </div>
+    </div>
+  </div>   
 
 </body>
 </html>
