--- a/week0_HTML_CSS/css-mocks/index.html
+++ b/week0_HTML_CSS/css-mocks/index.html
@@ -30,7 +30,7 @@
       <div class="pic-container pic1">
        </div>
       <div class="caption">
-        NOM NOM NOM
+        NOM NOM NOM!
       </div>
     </div>
     <div class="card">
