--- a/week0_HTML_CSS/css-mocks/index.html
+++ b/week0_HTML_CSS/css-mocks/index.html
@@ -29,21 +29,21 @@
     <div class="card">
       <div class="pic-container pic1">
        </div>
-      <div class="caption">
-        NOM NOM NOM!
+      <div class="card-rollover">
+        NOM NOM NOM
       </div>
     </div>
     <div class="card">
       <div class="pic-container pic2">
        </div>
-      <div class="caption">
+      <div class="card-rollover">
         WANNA DANCE?
       </div>
     </div>
     <div class="card">
       <div class="pic-container pic3">
        </div>
-      <div class="caption">
+      <div class="card-rollover">
         HIGH FIVE!
       </div>
     </div>
