rolloever text fix

--- a/week0_HTML_CSS/css-mocks/index.html
+++ b/week0_HTML_CSS/css-mocks/index.html
@@ -30,7 +30,9 @@
       <div class="pic-container pic1">
        </div>
       <div class="card-rollover">
-        NOM NOM NOM
+        NOM <br>
+        NOM <br>
+        NOM
       </div>
     </div>
     <div class="card">
