--- a/8-2-17_dom_finding/index.html
+++ b/8-2-17_dom_finding/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link rel="stylesheet" href="app.css">
+    <!-- <script src="app.js"></script> -->
 </head>
 <body>
     <div class="header">
