--- a/8-2-17_dom_finding/index.html
+++ b/8-2-17_dom_finding/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <!-- <script src="app.js"></script> -->
 </head>
 <body>
     <div class="header">
@@ -22,5 +21,6 @@
     </section>
     <div class="footer">
     </div>
+    <script src="app.js"></script>
 </body>
 </html>
