--- a/8-4-6_todo-list/index.html
+++ b/8-4-6_todo-list/index.html
@@ -11,11 +11,11 @@
 
 <h1>My To-Do List</h1>
   <ul id="todo-list"></ul>
-    <form id="todoForm">
+  <form action="#" id="newTodoForm">
       <label for="task">Task: </label>
       <input type="text" id="task" />
       <button>Add a Task</button>
     </form>
-    <script src="form-script.js"></script>
+    <script src="form-localStorage.js"></script>
 </body>
 </html>
