more list fixesw

--- a/8-4-6_todo-list/index.html
+++ b/8-4-6_todo-list/index.html
@@ -16,6 +16,6 @@
       <input type="text" id="task" />
       <button>Add a Task</button>
     </form>
-    <script src="form-localStorage.js"></script>
+    <script src="form-script.js"></script>
 </body>
 </html>
