todo list update

--- a/8-4-6_todo-list/index.html
+++ b/8-4-6_todo-list/index.html
@@ -12,10 +12,10 @@
 <h1>My To-Do List</h1>
   <ul id="todo-list"></ul>
   <form action="#" id="newTodoForm">
-      <label for="task">Task: </label>
-      <input type="text" id="task" />
-      <button>Add a Task</button>
-    </form>
-    <script src="form-script.js"></script>
+    <label for="task">Task: </label>
+    <input type="text" name="task" id="task" autofocus>
+    <input type="submit" value="Add Todo">
+</form>
+<script src="form-script.js"></script>
 </body>
 </html>
