--- a/8-4-6_todo-list/index.html
+++ b/8-4-6_todo-list/index.html
@@ -16,6 +16,6 @@
     <input type="text" name="task" id="task" autofocus>
     <input type="submit" value="Add Todo">
 </form>
-<script src="form-script.js"></script>
+<script src="form-localStorage.js"></script>
 </body>
 </html>
