--- a/8-4-6_todo-list/index.html
+++ b/8-4-6_todo-list/index.html
@@ -10,8 +10,8 @@
 <body>
 
 <h1>My To-Do List</h1>
-  <ul id="todo-list"></ul>
-  <form action="#" id="newTodoForm">
+<ul id="todoList">
+<form action="#" id="newTodoForm">
     <label for="task">Task: </label>
     <input type="text" name="task" id="task" autofocus>
     <input type="submit" value="Add Todo">
