--- a/8-4-6_todo-list/index.html
+++ b/8-4-6_todo-list/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<h1>My To-Do List</h1>
+<h1>Create To-Do List</h1>
 <ul id="todoList">
 <form action="#" id="newTodoForm">
     <label for="task">Task: </label>
