--- a/8-4-6_todo-list/index.html
+++ b/8-4-6_todo-list/index.html
@@ -9,13 +9,17 @@
 </head>
 <body>
 
-<h1>Create To-Do List</h1>
-<ul id="todoList">
-<form action="#" id="newTodoForm">
-    <label for="task">Task: </label>
-    <input type="text" name="task" id="task" autofocus>
-    <input type="submit" value="Add Todo">
-</form>
-<script src="form-localStorage.js"></script>
+<div class="form-container">
+<h1>My To-Do List</h1>
+  <ul id="todoList">
+  </ul>
+    
+  <form action="#" id="newTodoForm">
+  <label for="task">Task: </label>
+  <input type="text" id="task" autofocus>
+  <input type="submit" value="Add Todo">
+  </form>
+  <script src="form-script.js"></script>
+</div>
 </body>
 </html>
