--- a/memory-game/index.html
+++ b/memory-game/index.html
@@ -9,7 +9,7 @@
   <body>
   <div id="container">
     <div id="overlay"></div>
-      <h1>Matching Game</h1>
+      <h1>Memory Game</h1>
       <h2>Click on the cards to flip them over. Match all of the card pairs.</h2>
     <div id="scorecard"></div>
     <div id="game">
