--- a/memory-game/index.html
+++ b/memory-game/index.html
@@ -21,7 +21,7 @@
     <button id="button" data-hex="#00cec9">Robin's Egg Blue</button>
     <button id="button" data-hex="#FFA07A">Light Salmon</button>
     <button id="button" data-hex="#CD5C5C">Indian Red</button>
-    <button id="button" data-hex="#ADD8E6">Light Blue (original)</button>
+    <button id="button" data-hex="#ADD8E6">Light Blue</button>
 
    </section>
   <script src="script.js"></script>
