--- a/jasmine-testing-exercises/tip-pool/index.html
+++ b/jasmine-testing-exercises/tip-pool/index.html
@@ -5,8 +5,7 @@
 <link rel="stylesheet" href="style.css" />
 
 <!-- include CSS for Jasmine -->
-<link rel="stylesheet"
-  href="https://unpkg.com/jasmine-core/lib/jasmine-core/jasmine.css" />
+<link rel="stylesheet" href="https://unpkg.com/jasmine-core/lib/jasmine-core/jasmine.css" />
 </head>
 <body>
   <h1>Tip Pool</h1>
@@ -79,19 +78,20 @@
   </section>
 <!-- uncoment the following to run Jasmine tests -->
 
-<script 
-  src="https://unpkg.com/jasmine-core/lib/jasmine-core/jasmine.js"></script>
-<script 
-  src="https://unpkg.com/jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
-<script 
-  src= "https://unpkg.com/jasmine-core/lib/jasmine-core/boot.js"></script>
+<script src="https://unpkg.com/jasmine-core/lib/jasmine-core/jasmine.js"></script>
+<script src="https://unpkg.com/jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
+<script src="https://unpkg.com/jasmine-core/lib/jasmine-core/boot.js"></script>
 
+<script src="payments.test.js"></script> 
 <script src="servers.test.js"></script> 
+<script src="helpers.test.js"></script> 
 
 <!-- end of Jasmine tests -->
 
 <script src="payments.js"></script> 
 <script src="servers.js"></script> 
 <script src="helpers.js"></script> 
+
+
 </body>
 </html>
