--- a/connect-four/index.html
+++ b/connect-four/index.html
@@ -4,6 +4,9 @@
   <link href="connect4.css" rel="stylesheet">
 </head>
 <body>
+<h1>Connect Four</h1>
+<h2>Click on the top row to drop playing pieces. <br>
+The player with Four-in-a-Row wins!</h2>
 
 <div id="container">
 <div id="game">
