--- a/connect-four/index.html
+++ b/connect-four/index.html
@@ -6,7 +6,7 @@
 <body>
 <h1>Connect Four</h1>
 <h2>Click on the top row to drop playing pieces. <br>
-The player with Four-in-a-Row wins!</h2>
+The player with four-in-a-row wins!</h2>
 
 <div id="container">
 <div id="game">
