--- a/connect-four-oo/index.html
+++ b/connect-four-oo/index.html
@@ -2,11 +2,29 @@
 <head>
   <title>Connect 4</title>
   <link href="connect4.css" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+  <script>
+    WebFont.load({
+      google: {
+        families: ['Righteous:300,400,700']
+      }
+    });
+  </script>
 </head>
 <body>
 
+<h1>Connect 4</h1>
+
+<div id="inputContainer">
+  <input id="p1-color" placeholder="Player 1 color">
+  <input id="p2-color" placeholder="Player 2 color">
+<button id="start-game">Start Game</button>
+</div>
+
 <div id="game">
+  <div id="container">
   <table id="board"></table>
+  </div>
 </div>
 
 <script src="connect4.js"></script>
