--- a/connect-four-oo/index.html
+++ b/connect-four-oo/index.html
@@ -2,18 +2,10 @@
 <head>
   <title>Connect 4</title>
   <link href="connect4.css" rel="stylesheet">
-  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-  <script>
-    WebFont.load({
-      google: {
-        families: ['Righteous:300,400,700']
-      }
-    });
-  </script>
 </head>
 <body>
 
-<h1>Connect 4</h1>
+<h1>Connect Four</h1>
 
 <div id="inputContainer">
   <input id="p1-color" placeholder="Player 1 color">
