--- a/connect-four-oo/index.html
+++ b/connect-four-oo/index.html
@@ -2,10 +2,11 @@
 <head>
   <title>Connect 4</title>
   <link href="connect4.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
 </head>
 <body>
 
-<h1>Connect Four</h1>
+<h1>Connect 4</h1>
 
 <div id="inputContainer">
   <input id="p1-color" placeholder="Player 1 color">
