--- a/connect-four-oo/index.html
+++ b/connect-four-oo/index.html
@@ -2,7 +2,7 @@
 <head>
   <title>Connect 4</title>
   <link href="connect4.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Righteous">
 </head>
 <body>
 
