add image to intro overlay

--- a/connect-four-oo/index.html
+++ b/connect-four-oo/index.html
@@ -13,7 +13,9 @@
 </div>
 <div id="game">
   <div id="gameContainer">
-  <div id="overlay"></div>
+  <div id="overlay">
+
+  </div>
   <table id="board"></table>
   </div>
 </div>
