add 18-1-1_how_web_works_exercises files

--- a/bootstrap-mocks/index2.html
+++ b/bootstrap-mocks/index2.html
@@ -43,7 +43,7 @@
     <table class="table table-striped table-hover">
         <thead>
           <tr>
-            <th scope="col">Name<i id="name" class="fas fa-sort-down"></i></th>
+            <th scope="col">Name</th>
             <th scope="col">Team</th>
             <th scope="col">All Star</th>
             <th scope="col">Remove</th>
