--- a/18-3-12_ajax-giphy-party/index.html
+++ b/18-3-12_ajax-giphy-party/index.html
@@ -21,8 +21,8 @@
     <div id="gif-area" class="row">
     </div>
 
-    <div id="logo" class="row d-flex justify-content-center mt-6">
-        <a href="http://giphy.com"></a>Powered by:<img src="GIPHY_Logo_30px.png" alt="giphy logo">
+    <div id="logo" class="row d-flex justify-content-center mt-12">
+        <a href="http://giphy.com"></a>powered by:<img src="GIPHY_Logo_30px.png" alt="giphy logo">
     </div>
 
 </div> <!-- end container -->
