--- a/18-3-14_apis-tvmaze/index.html
+++ b/18-3-14_apis-tvmaze/index.html
@@ -17,7 +17,7 @@
       <div class="mb-3 row">
         <div class="col-xs-12 col-sm-8 col-md-6 col-lg-5 col-xl-4">
           <div class="input-group">
-            <input id="searchForm-term" type="search" required value="Enter a show name" class="form-control"
+            <input id="searchForm-term" type="search" required value="Enter show name" class="form-control"
               aria-label="Search">
             <button type="submit" class="input-group-text btn btn-primary">Search</button>
           </div>
