--- a/18-3-14_apis-tvmaze/index.html
+++ b/18-3-14_apis-tvmaze/index.html
@@ -5,7 +5,6 @@
   <title>TV Maze</title>
   <link href="https://bootswatch.com/5/superhero/bootstrap.css" rel="stylesheet">
   <link href="https://unpkg.com/bootstrap-table@1.22.0/dist/bootstrap-table.min.css" rel="stylesheet">
-
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
@@ -33,8 +32,8 @@
 
     <section id="episodesArea" style="display: none">
       <h3>Episodes</h3>
-        <table class="table table-striped table-hover w-auto">
-          <thead class="thead-dark">
+      <table class="table table-striped table-dark">
+        <thead>
             <tr class="d-flex">
               <th class="col-4">Episode Name</th>
               <th class="col-1">Season #</th>
